Fix broken layout

--- a/engine/jquery/app.css
+++ b/engine/jquery/app.css
@@ -7,3 +7,9 @@
   background: #ed1c24;
   border: #ed1c24;
 }
+
+/* More space for title in header */
+.ui-header .ui-title {
+    margin-right: 10%;
+    margin-left: 10%;
+}
